[package]
name = "pucli"
version = "0.4.1"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Simple pulsar cli"
keywords = [ "pulsar", "cli", "tool" ]
repository = "https://github.com/dghilardi/pucli"
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "^0.9.0"
log = "^0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }

ctrlc = { version = "3.2.1", features = ["termination"] }

anyhow = "^1.0.53"
clap = { version = "^3.0.14", features = ["derive"] }
tokio = { version = "^1.16.1", features = ["rt", "macros"] }
futures = "^0.3.19"
pulsar = "^4.1.1"
