[package]
name = "pucli"
version = "0.5.3"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Simple pulsar cli"
keywords = [ "pulsar", "cli", "tool" ]
repository = "https://github.com/dghilardi/pucli"
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "^0.11.10"
log = "^0.4.14"
uuid = { version = "^1.23.1", features = ["v4"] }

ctrlc = { version = "3.2.1", features = ["termination"] }

anyhow = "^1.0.53"
clap = { version = "^4.6.1", features = ["derive"] }
tokio = { version = "^1.16.1", features = ["rt", "macros"] }
futures = "^0.3.19"
pulsar = "6.1.0"
